crates/edgezero-macros/tests/ui/secret_with_serde_skip_serializing_if.stderr
error: `#[serde(skip_serializing_if)]` is not allowed on fields of an `AppConfig`-derived struct (it would desync the canonical-form rules in §4.2 from the serde JSON shape). If you need a flat layout, define it explicitly.
  --> tests/ui/secret_with_serde_skip_serializing_if.rs:12:5
   |
12 |     #[serde(skip_serializing_if = "String::is_empty")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
